Bug 105894 Clicking a partially off-screen link shouldn't scroll the page r+sr=roc